fixed nav bar. carousel is no longer covering it on scroll

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,19 @@ body {
 	  monospace;
   }
 
+  .navbar{
+	top: 0 ;
+    background:white;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    padding: 20px 20px 20px 20px;
+    position: sticky;
+    width: 100%;
+    box-shadow: 0px 5px 5px #c4c4c4;
+    height: 270px;
+	flex-wrap:wrap;
+	z-index: 11;
+  }
